--- a/KomodoInsurance/KomodoInsurance_Test.csproj
+++ b/KomodoInsurance/KomodoInsurance_Test.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Komodo_Ins_Repo\Komodo_Ins_Repo.csproj">
+      <Project>{63056039-41B8-48A3-946B-ED4A58B74477}</Project>
+      <Name>Komodo_Ins_Repo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
